--- a/src/style.css
+++ b/src/style.css
@@ -1,179 +1,151 @@
-* {
+*,
+*::after,
+*::before {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
-  background-color: rgb(243, 236, 236);
-  position: relative;
+  min-height: 100vh;
   width: 100%;
-  height: 100%;
-  font-family: 'Open Sans', sans-serif;
-  padding: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.container {
+h1 {
+  font-family: 'Comic Neue', cursive;
+  margin-bottom: 2%;
+  margin-top: 5%;
+  margin-left: 2%;
+}
+
+h3 {
+  margin-bottom: 4%;
+  font-family: 'Comic Neue', cursive;
+}
+
+.flex {
   position: relative;
-  width: 60%;
-  height: 100%;
-  margin: 10% auto;
-  box-shadow: 0.5rem 0.5rem 8px grey;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  height: calc(93vh - 7vh);
+  margin-bottom: 5%;
+  flex: 1;
+}
+
+.left {
+  grid-column: 1 / 2;
+  grid-row: 1 / 1;
+}
+
+.right {
+  grid-column: 2 / 2;
+  grid-row: 1 / 1;
 }
 
 form {
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-div {
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-.body {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  padding: 0;
-}
-
-.fa-solid {
-  text-align: right;
-  float: right;
-  margin-right: 5%;
-  cursor: pointer;
-}
-
-#refresh {
-  text-align: right;
-  float: right;
-  margin-right: 3%;
-  cursor: pointer;
-}
-
-.trash {
-  position: absolute;
-  left: 56vw;
-  right: 44vw;
-  cursor: pointer;
-}
-
-*:focus {
-  outline: none;
-}
-
-.clear-all {
-  background-color: rgb(207, 203, 203);
-  text-align: center;
-}
-
-.clear-all:hover {
-  cursor: pointer;
-}
-
-.section::placeholder {
-  font-family: 'Open Sans', sans-serif;
-  font-style: italic;
   display: flex;
-  row-gap: 100%;
+  flex-direction: column;
+  position: relative;
 }
 
-.section {
-  border-bottom: 1px solid #ddd;
+#name {
+  margin-bottom: 5%;
+  width: 50%;
+  border: 2px solid black;
+  font-family: 'Comic Neue', cursive;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+#score {
+  margin-bottom: 5%;
+  width: 50%;
+  border: 2px solid black;
+  font-family: 'Comic Neue', cursive;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+#submit {
+  width: 20%;
+  background-color: white;
+  font-family: 'Comic Neue', cursive;
+  outline: none;
+  text-decoration: none;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 5);
+  margin-left: 30%;
+  position: relative;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+input::placeholder {
+  color: black;
+  padding-left: 4%;
+}
+
+.error-message {
+  margin-top: 5%;
+  font-family: 'Comic Neue', cursive;
+  color: red;
+  font-weight: bold;
+}
+
+.refresh {
+  background-color: white;
+  font-family: 'Comic Neue', cursive;
+  outline: none;
+  text-decoration: none;
+  box-shadow: 2px 2px 0 rgba(0, 0, 0, 5);
+  padding: 1%;
+  cursor: pointer;
+}
+
+.recent-scores {
+  display: flex;
+  gap: 50%;
+  align-items: baseline;
+  margin-left: 10%;
+  position: relative;
+}
+
+ul {
+  border: 2px solid black;
+}
+
+ul li {
+  font-family: 'Comic Neue', cursive;
+  list-style: none;
+  padding: 2%;
+}
+
+ul li:nth-child(odd) {
   background-color: white;
 }
 
-.td {
-  padding-left: 5%;
+ul li:nth-child(even) {
+  background-color: rgb(159, 221, 240);
 }
 
-a {
-  text-decoration: none;
-  text-align: center;
-  color: black;
-}
-
-input[type=checkbox] {
-  margin-right: 2%;
-}
-
-.check-box-edit {
-  margin: 0;
-  position: absolute;
-  left: 5%;
-}
-
-input[type="text"] {
-  min-height: 100%;
-  margin-left: 3%;
-}
-
-input[type="text"]::placeholder {
-  position: relative;
-  left: 3%;
-}
-
-#input {
+.list-container {
   width: 80%;
-  border: none;
-  min-height: 3vh;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-left: 10%;
 }
 
-.input-area {
+.container-2 {
+  margin-left: 30%;
+}
+
+footer {
   position: relative;
+  background-color: rgb(173, 169, 169);
   width: 100%;
-  min-height: 3vh;
-}
-
-#enter {
-  position: absolute;
-  color: grey;
-  left: 56vw;
-  right: 44vw;
-  cursor: pointer;
-}
-
-.input-area span {
-  position: relative;
-  min-height: 3vh;
-  width: 100%;
-}
-
-.input-edit {
-  position: relative;
-  width: 80%;
-  border: none;
-  background-color: rgba(255, 253, 208, 1);
-  left: 8%;
-}
-
-.completed {
-  text-decoration: line-through;
-}
-
-li {
-  list-style-type: none;
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-button {
-  position: relative;
-  width: 100%;
-  min-height: 3vh;
-  border: none;
-  color: inherit;
-  font: inherit;
-  cursor: pointer;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  outline: none;
-}
-
-.edit {
-  background-color: rgba(255, 253, 208, 1);
+  height: 7vh;
+  flex-shrink: 0;
+  color: transparent;
+  top: 100%;
 }
